src/main/java/com/example/jobala/_core/errors/apiException/ApiException403.java
package com.example.jobala._core.errors.apiException;

public class ApiException403 extends RuntimeException {

    public ApiException403(String msg) {
        super(msg);
    }
}
